assets/css/goodmoves-styles.scss
/* ... */
/*=====Tab Bar=====*/

.mdc-tab-bar__left {
  margin-left: 0;
}

.mdc-tab-bar__right {
  margin-right: 0;
}

.mdc-tab-bar__compact {
  height: 2em;
  .mdc-tab {
    padding:0px;
  }
}

/*=====Utility classes=====*/

.text-left { text-align: left; }
.text-right { text-align: right; }
.text-centre { text-align: center; }
.text-justify { text-align: justify; }
.pull-right { float: right; }

.v-padding {
  padding-top: $unit/2;
  padding-bottom: $unit/2;
}
.v-padding-full {
  padding-top: $unit;
  padding-bottom: $unit;
}

.h-padding {
  padding-left: $unit/2;
  padding-bottom: $unit/2;
}

.t-padding { padding-top: $unit/2; }
.b-padding { padding-bottom: $unit/2; }
.l-padding { padding-left: $unit/2; }
.r-padding { padding-right: $unit/2; }

.v-margin {
  margin-top: $unit/2;
  margin-bottom: $unit/2;
}
.v-margin-full {
  margin-top: $unit;
  margin-bottom: $unit;
}

.h-margin {
  margin-left: $unit/2;
  margin-bottom: $unit/2;
}

.t-margin { margin-top: $unit/2; }
.b-margin { margin-bottom: $unit/2; }
.l-margin { margin-left: $unit/2; }
.r-margin { margin-right: $unit/2; }

@media (max-width: $mobile-breakpoint) {
  .hide-sm {
    display: none;
  }
}

@media (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
  .hide-md {
    display: none;
  }
}

@media (min-width: $mobile-landscape-breakpoint + 1) {
  .hide-lg {
    display: none;
  }
}

/*=====End Utility Classes=====*/
/*=====Colour Classes=====*/


/*=====End Colour Classes=====*/

